--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anill Portfolio Website</title>
     <!-- Link To CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Box Icons -->
     <link rel="stylesheet"
   href="node_modules/bootstrap/dist/css/bootstrap.css">
